--- a/src/customComponents/Icon/index.astro
+++ b/src/customComponents/Icon/index.astro
@@ -1,5 +1,5 @@
 ---
-// import './Icon.css'
+import './Icon.css'
 import type { RmUnitType } from '../Types'
 
 interface Props {
@@ -16,12 +16,3 @@ const { space, label } = Astro.props
 </icon-l>
 
 <script src="./Icon.ts"></script>
-
-<style>
-    icon-l svg {
-        height: calc(1.25 * 0.75em);
-        height: 1cap;
-        width: 0.75em;
-        width: 1cap;
-    }
-</style>
