--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -28,13 +28,12 @@ import './layouts.css'
 
     html {
         font-family: var(--font-sans);
-        line-height: 1.5;
 
         --color-light: hsl(0, 0%, 80%);
         --color-dark: hsl(0, 0%, 20%);
 
         /* light */
-        --brand-light: var(--orange-18);
+        --brand-light: var(--orange-12);
 
         /* open-props light theme as defaults but these are better */
         --text-1-light: var(--gray-8);
@@ -76,7 +75,7 @@ import './layouts.css'
         --s3: calc(var(--s0) * pow(var(--ratio), 3));
         --s4: calc(var(--s0) * pow(var(--ratio), 4));
         --s5: calc(var(--s0) * pow(var(--ratio), 5));
-
+        --line-height: var(--ratio);
         --font-size-biggish: var(--s1);
         --font-size-big: var(--s2);
 
