--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,26 +6,25 @@ import Stack from '@cc/Stack/index.astro'
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
 <Layout title="About Me" description="Lorem ipsum dolor sit amet">
-    <Stack recursive>
-        <Box borderWidth="0">
-            <Box borderWidth="0">
-                <p>Sagittis purus sc</p>
-            </Box>
-            <Box borderWidth="0">
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Dolorem exercitationem inventore, nihil amet officiis
-                    tenetur voluptas debitis reprehenderit asperiores cupiditate
-                    eum doloribus eos magnam voluptates suscipit praesentium
-                    recusandae magni nulla.
-                </p>
-            </Box>
-        </Box>
-        <Box borderWidth="0" invert>
-            <p>Invert purus sit amet volutc</p>
-        </Box>
-        <Box borderWidth="0">
-            <p>Sagittis purus sc</p>
-        </Box>
-    </Stack>
+  <Stack recursive>
+    <Box borderWidth="0">
+      <Box borderWidth="0">
+        <p>Sagittis purus sc</p>
+      </Box>
+      <Box borderWidth="0">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem
+          exercitationem inventore, nihil amet officiis tenetur voluptas debitis
+          reprehenderit asperiores cupiditate eum doloribus eos magnam
+          voluptates suscipit praesentium recusandae magni nulla.
+        </p>
+      </Box>
+    </Box>
+    <Box borderWidth="0" invert>
+      <p>Invert purus sit amet volutc</p>
+    </Box>
+    <Box borderWidth="0">
+      <p>Sagittis purus sc</p>
+    </Box>
+  </Stack>
 </Layout>
