--- a/src/components/CloseBtn.astro
+++ b/src/components/CloseBtn.astro
@@ -1,14 +1,25 @@
 ---
-
+import CloseSVG from './CloseSVG.astro'
 ---
 
-<svg
-    viewBox="0 0 10 10"
-    width="0.75em"
-    height="0.75em"
-    stroke="currentColor"
-    stroke-width="2"
->
-    <line x1="1" y1="1" x2="9" y2="9"></line>
-    <line x1="9" y1="1" x2="1" y2="9"></line>
-</svg>
+<button data-role="close" type="button"><CloseSVG /></button>
+
+<script is:inline>
+  document.addEventListener('astro:page-load', () => {
+    const buttons = document.querySelectorAll('button[data-role="close"]')
+
+    // Handle clicks on each button.
+    buttons.forEach((button) => {
+      button.addEventListener('click', () => {
+        console.log('Button was clicked!')
+      })
+    })
+  })
+  // Find all buttons with the `alert` class on the page.
+</script>
+
+<style>
+  #mybtn {
+    cursor: pointer;
+  }
+</style>
