--- a/src/components/ClusterExample.astro
+++ b/src/components/ClusterExample.astro
@@ -2,42 +2,40 @@
 import { Box, Cluster } from '@cc/index.ts'
 
 function generateRandomString() {
-    const length = 8
-    // Math.floor(Math.random() * 13) + 3 // Generate a random length between 3 and 15
-    let result = ''
-    const characters =
-        'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789'
-    for (let i = 0; i < length; i++) {
-        result += characters.charAt(
-            Math.floor(Math.random() * characters.length),
-        )
-    }
-    return result
+  const length = 8
+  // Math.floor(Math.random() * 13) + 3 // Generate a random length between 3 and 15
+  let result = ''
+  const characters =
+    'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789'
+  for (let i = 0; i < length; i++) {
+    result += characters.charAt(Math.floor(Math.random() * characters.length))
+  }
+  return result
 }
 ---
 
 <Box>
-    <Cluster role="list">
-        <div role="listitem"><a href="#tag3">{generateRandomString()}</a></div>
-        <div role="listitem"><a href="#tag4">{generateRandomString()}</a></div>
-        <div role="listitem"><a href="#tag1">{generateRandomString()}</a></div>
-        <div role="listitem"><a href="#tag2">{generateRandomString()}</a></div>
-        <div role="listitem"><a href="#tag3">{generateRandomString()}</a></div>
-        <div role="listitem"><a href="#tag4">{generateRandomString()}</a></div>
-        <div role="listitem"><a href="#tag1">{generateRandomString()}</a></div>
-        <div role="listitem"><a href="#tag2">{generateRandomString()}</a></div>
-        <div role="listitem"><a href="#tag3">{generateRandomString()}</a></div>
-        <div role="listitem"><a href="#tag4">{generateRandomString()}</a></div>
-    </Cluster>
+  <Cluster role="list">
+    <div role="listitem"><a href="#tag3">{generateRandomString()}</a></div>
+    <div role="listitem"><a href="#tag4">{generateRandomString()}</a></div>
+    <div role="listitem"><a href="#tag1">{generateRandomString()}</a></div>
+    <div role="listitem"><a href="#tag2">{generateRandomString()}</a></div>
+    <div role="listitem"><a href="#tag3">{generateRandomString()}</a></div>
+    <div role="listitem"><a href="#tag4">{generateRandomString()}</a></div>
+    <div role="listitem"><a href="#tag1">{generateRandomString()}</a></div>
+    <div role="listitem"><a href="#tag2">{generateRandomString()}</a></div>
+    <div role="listitem"><a href="#tag3">{generateRandomString()}</a></div>
+    <div role="listitem"><a href="#tag4">{generateRandomString()}</a></div>
+  </Cluster>
 </Box>
 
 <style>
-    .wrapper {
-        display: block;
-        border: 1px solid black;
-    }
+  .wrapper {
+    display: block;
+    border: 1px solid black;
+  }
 
-    a {
-        border: 1px solid black;
-    }
+  a {
+    border: 1px solid black;
+  }
 </style>
