--- a/src/components/select-component.astro
+++ b/src/components/select-component.astro
@@ -1,25 +1,24 @@
 <select data-navigate-select>
-    <option value="/demo/cluster-demo">cluster</option>
-    <option value="/demo/sidebar-demo">sidebar</option>
-    <option value="/demo/switcher-demo">switcher-demo</option>
-    <option value="/demo/grid-demo">grid-demo</option>
-    <option value="/demo/reel-demo">reel-demo</option>
-    <option value="/demo/imposter-demo">imposter-demo</option>
-    <option value="/demo/harmonic-demo">harmonic-demo</option>
+  <option value="/demo/cluster-demo">cluster</option>
+  <option value="/demo/sidebar-demo">sidebar</option>
+  <option value="/demo/switcher-demo">switcher-demo</option>
+  <option value="/demo/grid-demo">grid-demo</option>
+  <option value="/demo/reel-demo">reel-demo</option>
+  <option value="/demo/imposter-demo">imposter-demo</option>
+  <option value="/demo/harmonic-demo">harmonic-demo</option>
 </select>
 
 <script>
-    import { navigate } from 'astro:transitions/client'
+  import { navigate } from 'astro:transitions/client'
 
-    document.addEventListener('astro:page-load', () => {
-        const select = document.querySelector(
-            '[data-navigate-select]',
-        ) as HTMLSelectElement
-        select.value = window.location.pathname
-        select.addEventListener(
-            'change',
-            (e: Event) =>
-                e.target && navigate((e.target as HTMLSelectElement).value),
-        )
-    })
+  document.addEventListener('astro:page-load', () => {
+    const select = document.querySelector(
+      '[data-navigate-select]',
+    ) as HTMLSelectElement
+    select.value = window.location.pathname
+    select.addEventListener(
+      'change',
+      (e: Event) => e.target && navigate((e.target as HTMLSelectElement).value),
+    )
+  })
 </script>
