--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -13,57 +13,51 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props
 ---
 
 <Layout title="blog post" description="Lorem ipsum dolor sit amet">
-    <article>
-        <div class="stack">
-            <Box>
-                <div class="hero-image box">
-                    {
-                        heroImage && (
-                            <img
-                                width={1020}
-                                height={510}
-                                src={heroImage}
-                                alt=""
-                            />
-                        )
-                    }
-                </div>
-                <div class="prose box">
-                    <div class="box">
-                        <div class="date box">
-                            <FormattedDate date={pubDate} />
-                            {
-                                updatedDate && (
-                                    <div class="last-updated-on">
-                                        Last updated on{' '}
-                                        <FormattedDate date={updatedDate} />
-                                    </div>
-                                )
-                            }
-                        </div>
-                        <div class="box"><h3>{title}</h3></div>
-                        <hr />
-                    </div>
-                    <slot />
-                </div>
-            </Box>
+  <article>
+    <div class="stack">
+      <Box>
+        <div class="hero-image box">
+          {
+            heroImage && (
+              <img width={1020} height={510} src={heroImage} alt="" />
+            )
+          }
         </div>
-    </article>
+        <div class="prose box">
+          <div class="box">
+            <div class="date box">
+              <FormattedDate date={pubDate} />
+              {
+                updatedDate && (
+                  <div class="last-updated-on">
+                    Last updated on <FormattedDate date={updatedDate} />
+                  </div>
+                )
+              }
+            </div>
+            <div class="box"><h3>{title}</h3></div>
+            <hr />
+          </div>
+          <slot />
+        </div>
+      </Box>
+    </div>
+  </article>
 </Layout>
 
 <style>
-    .hero-image img {
-        border-radius: 12px;
-        box-shadow: var(--box-shadow);
-    }
-    .prose {
-        color: rgb(var(--gray-dark));
-    }
+  .hero-image img {
+    border-radius: 12px;
+    box-shadow: var(--box-shadow);
+  }
+  .prose {
+    color: rgb(var(--gray-dark));
+  }
 
-    .date {
-        color: rgb(var(--gray));
-    }
-    .last-updated-on {
-        font-style: italic;
-    }
+  .date {
+    color: rgb(var(--gray));
+  }
+  .last-updated-on {
+    font-style: italic;
+  }
 </style>
