--- a/src/layouts/SimpleLayout.astro
+++ b/src/layouts/SimpleLayout.astro
@@ -7,46 +7,48 @@ import Footer from '@components/Footer.astro'
 import { Box, Cover, Center } from '@cc/index.ts'
 
 type Props = {
-    title?: string
-    description?: string
+  title?: string
+  description?: string
 }
 
 const {
-    title = 'I NEED A TITLE',
-    description = 'no description provided',
-    // pubDate, updatedDate, heroImage
+  title = 'I NEED A TITLE',
+  description = 'no description provided',
+  // pubDate, updatedDate, heroImage
 } = Astro.props
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 
 function capitalizeWords(str: string) {
-    return str
-        .split(' ')
-        .map(
-            (word) =>
-                word.charAt(0).toUpperCase() + word.slice(1).toLowerCase(),
-        )
-        .join(' ')
+  return str
+    .split(' ')
+    .map((word) => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase())
+    .join(' ')
 }
 ---
 
 <html lang="en">
-    <head>
-        <BaseHead title={title} description={description} />
-        <link rel="canonical" href={canonicalURL} />
-        <ViewTransitions />
-        <GlobalStyle />
-    </head>
+  <head>
+    <BaseHead title={title} description={description} />
+    <link rel="canonical" href={canonicalURL} />
+    <ViewTransitions />
+    <GlobalStyle />
+  </head>
 
-    <body color-scheme="light" class="appContainer">
-        <Box borderWidth="0" padding="0">
-            <Cover centeredElement="main" noPad={true} space="0">
-                <Header />
-                <main class="box">
-                    <slot />
-                </main>
-                <Footer />
-            </Cover>
-        </Box>
-    </body>
+  <body color-scheme="light" class="appContainer">
+    <Box borderWidth="0" padding="0">
+      <Cover centeredElement="main" noPad={true} space="0">
+        <Header />
+        <main class="center">
+          <slot />
+        </main>
+        <Footer />
+      </Cover>
+    </Box>
+    <style>
+      main {
+        max-inline-width: var(--measure);
+      }
+    </style>
+  </body>
 </html>
