--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,29 +3,25 @@
 import { SITE_TITLE } from '../consts'
 import HeaderLink from './HeaderLink.astro'
 
-import { Box, Cluster } from '@cc/index.ts'
+import { Box, Center, Cluster } from '@cc/index.ts'
 import Select from '@components/select-component.astro'
 ---
 
 <header class="box invert">
-  <!-- <Center andText={true} intrinsic={true}> -->
-
-  <Box borderWidth="0">
-    <Cluster>
-      <div>
+  <Center andText={true} intrinsic={true}>
+    <Box>
+      <Cluster>
         <Box padding="0" borderWidth="var(--border-thin)"
           ><a href="../"><h6>{SITE_TITLE}</h6></a></Box
         >
         <Select />
-      </div>
-      <Cluster>
+
         <HeaderLink href="/">Home</HeaderLink>
         <HeaderLink href="/blog">Blog</HeaderLink>
         <HeaderLink href="/about">About</HeaderLink>
         <HeaderLink href="/test">Test</HeaderLink>
         <HeaderLink href="/mytest">mytest</HeaderLink>
       </Cluster>
-    </Cluster>
-  </Box>
-  <!-- </Center> -->
+    </Box>
+  </Center>
 </header>
