--- a/src/customComponents/ShrinkGrow/index.astro
+++ b/src/customComponents/ShrinkGrow/index.astro
@@ -1,6 +1,6 @@
 ---
 import './ShrinkGrow.css'
-import type { RmUnitType } from '../Types'
+// import type { RmUnitType } from '../Types'
 
 interface Props {
   denominator: number
