--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@layouts/Layout.astro'
-import { Box, Stack } from '@cc/index.ts'
+// import { Box, Stack } from '@cc/index.ts'
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
