--- a/src/components/BoxWithHeader.astro
+++ b/src/components/BoxWithHeader.astro
@@ -1,12 +1,19 @@
 ---
-import { Box } from '@cc/index.ts'
+import { Box, Stack, Center } from '@cc/index.ts'
 ---
 
-<Box padding="0">
-  <Box borderWidth="0" invert>
-    <slot name="headline" />
-  </Box>
-  <Box borderWidth="0">
-    <slot name="copy" />
-  </Box>
+<Box padding="0" borderWidth="0">
+  <Stack>
+    <Center>
+      <Box>
+        <Box borderWidth="0">
+          <slot name="headline" />
+        </Box>
+        <Box borderWidth="0">
+          <slot name="graphic" />
+          <slot name="copy" />
+        </Box>
+      </Box>
+    </Center>
+  </Stack>
 </Box>
