--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,10 @@
 ---
 import Layout from '@layouts/SimpleLayout.astro'
-import AstroHeart from '@cc/HeartBtn.astro'
+
 // import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
-import CloseBtn from '@components/CloseSVG.astro'
+
 import Dialouge from '@components/Dialouge.astro'
-import { Box, Icon, Center } from '@cc/index.ts'
-import BoxWithHeader from '@components/BoxWithHeader.astro'
+import { Box } from '@cc/index.ts'
 ---
 
 <Layout title="home" description="testing css">
