--- a/src/pages/demo/harmonic-demo.astro
+++ b/src/pages/demo/harmonic-demo.astro
@@ -2,7 +2,7 @@
 import Layout from '@layouts/SimpleLayout.astro'
 import Cluster from '@cc/Cluster/index.astro'
 import BoxWithHeader from '@components/BoxWithHeader.astro'
-import { Center, Box } from '@cc/index.ts'
+// import { Center, Box } from '@cc/index.ts'
 ---
 
 <Layout>
