replace .ts with .js as per typescript spec

--- a/src/customComponents/Cluster/index.astro
+++ b/src/customComponents/Cluster/index.astro
@@ -18,7 +18,7 @@ const { justify, align, space } = Astro.props
   <slot />
 </cluster-l>
 
-<script src="./Cluster.ts"></script>
+<script src="./Cluster"></script>
 
 <!-- 
 side	string	"left"	Which element to treat as the sidebar (all values but "left" are considered "right")
