--- a/src/customComponents/Cover/index.astro
+++ b/src/customComponents/Cover/index.astro
@@ -17,7 +17,7 @@ const { centeredElement: centered, ...rest } = Astro.props
   <slot />
 </cover-l>
 
-<script src="./Cover.ts"></script>
+<script src="./Cover.js"></script>
 
 <!-- 
 side	string	"left"	Which element to treat as the sidebar (all values but "left" are considered "right")
