--- a/src/customComponents/Icon/index.astro
+++ b/src/customComponents/Icon/index.astro
@@ -15,4 +15,4 @@ const { space, label } = Astro.props
   <slot />
 </icon-l>
 
-<script src="./Icon.ts"></script>
+<script src="./Icon.js"></script>
