--- a/src/customComponents/Reel/index.astro
+++ b/src/customComponents/Reel/index.astro
@@ -17,4 +17,4 @@ const { itemWidth, space, height, noBar } = Astro.props
   <slot />
 </reel-l>
 
-<script src="./Reel.ts"></script>
+<script src="./Reel.js"></script>
