--- a/src/customComponents/Stack/index.astro
+++ b/src/customComponents/Stack/index.astro
@@ -13,4 +13,4 @@ const { space = 'var(--s1)', recursive = false, splitAfter } = Astro.props
   <slot />
 </stack-l>
 
-<script src="./Stack.ts"></script>
+<script src="./Stack.js"></script>
