--- a/src/components/ClusterExample.astro
+++ b/src/components/ClusterExample.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Cluster } from '@cc/index.ts'
+import { Box, Cluster } from '@cc/index'
 
 function generateRandomString() {
   const length = 8
