--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 const today = new Date()
-import { Box, Center, Stack, Cluster } from '@cc/index.ts'
+import { Center, Stack, Cluster } from '@cc/index.ts'
 ---
 
 <footer class="box invert">
