--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -6,7 +6,7 @@ type Props = HTMLAttributes<'a'> & {
 }
 
 const { href } = Astro.props
-const { pathname } = Astro.url
+// const { pathname } = Astro.url
 ---
 
 <!-- <Box padding='--sizes'><a href={href} class:list={[{ active: isActive }]}>
