--- a/src/customComponents/Cover/index.astro
+++ b/src/customComponents/Cover/index.astro
@@ -7,7 +7,7 @@ type Props = {
   space?: RmUnitType //"var(--s1)"
   minHeight?: RmUnitType //"100vh"
   noPad?: boolean // false
-  children: any
+  children: unknown
 }
 
 const { centeredElement: centered, ...rest } = Astro.props
