--- a/src/customComponents/Grid/index.astro
+++ b/src/customComponents/Grid/index.astro
@@ -5,7 +5,7 @@ import type { RmUnitType } from '../Types'
 interface Props {
   min?: RmUnitType //"250px"
   space?: RmUnitType //"var(--s1)"
-  children: any
+  children: unknown
 }
 
 const { min, space } = Astro.props
