--- a/src/pages/demo/harmonic-demo.astro
+++ b/src/pages/demo/harmonic-demo.astro
@@ -1,9 +1,6 @@
 ---
 import Layout from '@layouts/SimpleLayout.astro'
-import { Grid, Cluster, Center, Box } from '@cc/index.ts'
-import FilledBox from '@components/FilledBox.astro'
-
-// import { Center, Box } from '@cc/index.ts'
+import { Cluster, Center, Box } from '@cc/index.ts'
 ---
 
 <Layout>
