--- a/src/pages/demo/imposter-demo.astro
+++ b/src/pages/demo/imposter-demo.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@layouts/SimpleLayout.astro'
-import { Box, Imposter, Cluster } from '@cc/index.ts'
+import { Imposter, Cluster } from '@cc/index.ts'
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
@@ -19,5 +19,7 @@ import { Box, Imposter, Cluster } from '@cc/index.ts'
     background-color: aqua;
     height: 100%;
     width: 100%;
+  }
+  .h4 {
   }
 </style>
