--- a/src/customComponents/Reel/index.astro
+++ b/src/customComponents/Reel/index.astro
@@ -7,7 +7,7 @@ interface Props {
   space?: RmUnitType //"var(--s1)"
   height?: 'auto' | RmUnitType //"var(--s1)"
   noBar?: boolean
-  children: any
+  children: unknown
 }
 
 const { itemWidth, space, height, noBar } = Astro.props
