--- a/src/layouts/SimpleLayout.astro
+++ b/src/layouts/SimpleLayout.astro
@@ -4,7 +4,7 @@ import { ViewTransitions } from 'astro:transitions'
 import BaseHead from '@components/BaseHead.astro'
 import Header from '@components/Header.astro'
 import Footer from '@components/Footer.astro'
-import { Box, Cover } from '@cc/index.ts'
+import { Cover } from '@cc/index.ts'
 
 type Props = {
   title?: string
