--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -25,3 +25,18 @@
 }
 
 /* end stack */
+
+[class^='box'].invert {
+  filter: invert(100%);
+}
+
+.box {
+  padding: var(--s0);
+  border-width: var(--border-size-1);
+  border-color: var(--border-color);
+}
+.box-no-border {
+  outline: var(--size-0) solid transparent;
+  outline-offset: (calc * var(--size-0));
+}
+
