--- a/src/customComponents/Container/index.astro
+++ b/src/customComponents/Container/index.astro
@@ -15,7 +15,7 @@ const { name } = Astro.props
   <slot />
 </container-l>
 
-<script src="./Container.js"></script>
+<script src="./Container.ts"></script>
 
 <!-- 
 side	string	"left"	Which element to treat as the sidebar (all values but "left" are considered "right")
