--- a/src/customComponents/Imposter/index.astro
+++ b/src/customComponents/Imposter/index.astro
@@ -15,4 +15,4 @@ const props = Astro.props
   <slot />
 </imposter-l>
 
-<script src="./Imposter.js"></script>
+<script src="./Imposter.ts"></script>
