--- a/src/customComponents/Sidebar/index.astro
+++ b/src/customComponents/Sidebar/index.astro
@@ -16,7 +16,7 @@ const props = Astro.props
   <slot />
 </sidebar-l>
 
-<script src="./Sidebar.js"></script>
+<script src="./Sidebar.ts"></script>
 
 <!-- 
 side	string	"left"	Which element to treat as the sidebar (all values but "left" are considered "right")
