--- a/src/customComponents/Box/index.astro
+++ b/src/customComponents/Box/index.astro
@@ -13,4 +13,4 @@ const { padding, borderWidth, invert } = Astro.props
 <box-l padding={padding} borderWidth={borderWidth} invert={invert}>
   <slot />
 </box-l>
-<script src="./Box.js"></script>
+<script src="./Box.ts"></script>
