--- a/src/customComponents/Frame/index.astro
+++ b/src/customComponents/Frame/index.astro
@@ -35,7 +35,7 @@ const { ratio } = Astro.props
   <slot />
 </frame-l>
 
-<script src="./Frame.js"></script>
+<script src="./Frame.ts"></script>
 
 <!-- 
 side	string	"left"	Which element to treat as the sidebar (all values but "left" are considered "right")
