--- a/src/customComponents/Switcher/index.astro
+++ b/src/customComponents/Switcher/index.astro
@@ -14,4 +14,4 @@ const props = Astro.props
   <slot />
 </switcher-l>
 
-<script src="./Switcher.js"></script>
+<script src="./Switcher.ts"></script>
